--- a/app_first/templates/flatpages/about.html
+++ b/app_first/templates/flatpages/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>{{ flatpage.title }}</title>
 </head>
 <body>
     {{ flatpage.content }}
-    <h2> We are supernaturals!</h2>
+    <h2> We got it!</h2>
 </body>
 </html>
