--- a/app_first/templates/flatpages/contact_page.html
+++ b/app_first/templates/flatpages/contact_page.html
@@ -5,6 +5,9 @@
     <title>{{ flatpage.title }}</title>
 </head>
 <body>
+    <h2>{{ flatpage.title }}</h2>
+    <hr>
+    <h3>Наши контакты:</h3>
     {{ flatpage.content }}
 </body>
 </html>
