Learned new features

--- a/app_first/templates/flatpages/exercise_3.7.html
+++ b/app_first/templates/flatpages/exercise_3.7.html
@@ -6,7 +6,6 @@
 </head>
 <body>
     {{ flatpage.content }}
-    {% include 'flatpages\inc.html' %}
-    <h2> We got it!</h2>
+    {{ flatpage.content }}
 </body>
 </html>
