--- a/app_first/templates/flatpages/exercise_3.6.html
+++ b/app_first/templates/flatpages/exercise_3.6.html
@@ -5,8 +5,6 @@
     <title>{{ flatpage.title }}</title>
 </head>
 <body>
-    {{ flatpage.content }}
-    {% include 'flatpages\inc.html' %}
-    <h2> We got it!</h2>
+    <i>{{ flatpage.content }}</i>
 </body>
 </html>
