--- a/app_first/templates/flatpages/contact_page.html
+++ b/app_first/templates/flatpages/contact_page.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ flatpage.title }}</title>
-</head>
-<body>
+{% extends 'flatpages\default.html' %}
+
+{% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
     <h3>Наши контакты:</h3>
     {{ flatpage.content }}
-</body>
-</html>
+{% endblock content %}
